# authkit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  request.http
app/api/v1/: auth.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
static/: index.html
tests/: conftest.py
tests/integration/: test_auth.py
tests/unit/: test_security.py
