[project]
name = "authkit"
version = "0.1.0"
description = "A standalone authentication microservice"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length=88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",    # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["B008"]   # ignore "do not perform function call in default arguments" (FastAPI uses this pattern)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert statements in tests
